syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.salesfoce.apollo.proto";
option java_outer_classname = "ApolloProto";
option objc_class_prefix = "Ap";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "util.proto";

package apollo;

service Avalanche {
    /**
     * Avalanche query
     */
    rpc query (Query) returns (QueryResult) {}
    
    /**
     * parent gossip
     */
    rpc requestDag ( DagNodes ) returns (SuppliedDagNodes) {}
} 

message DagNodes {
    utils.Digeste context = 1;
    repeated string entries = 2;
}

message SuppliedDagNodes {
    utils.Digeste context = 1;
    repeated bytes entries = 2;
}

message DagEntries {
    utils.Digeste context = 1;
    repeated DagEntry entries = 2;
}

message Query {
    utils.Digeste context = 1;
    repeated utils.Digeste hashes = 2;
    repeated bytes transactions = 3;
    repeated utils.Digeste wanted = 4;
}

message DagEntry {
    enum EntryType {
        INVALID = 0;
        GENSIS = 1; 
        NO_OP = 2;
        USER = 3;
    } 
    EntryType description = 1;
    repeated utils.Digeste links = 2;
    google.protobuf.Any data = 3;
}

message QueryResult {
    enum Vote {
        TRUE = 0;
        FALSE = 1;
        UNKNOWN = 2; 
    } 
    repeated Vote result = 1;
    repeated bytes wanted = 2;
}
